@@ -3546,6 +3546,8 @@ TAO_CodeGen::gen_exec_src_includes (void)
     {
       this->gen_standard_include (
         this->ciao_exec_source_, "tao/ORB_Core.h");
+      this->gen_standard_include (
+        this->ciao_exec_source_, "ace/Reactor.h");
     }
 }
 
