@@ -1,3 +1,11 @@
+Fri Oct 22 11:54:34 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * TAO_IDL/be/be_codegen.cpp:
+          Added Reactor.h when the reactor code is generated.
+
+        * TAO_IDL/be/be_visitor_component/executor_exh.cpp:
+          Added a doxygen group "User defined members".
+
 Fri Oct 22 11:32:10 UTC 2010  Martin Corino  <corino_m@remedy.nl>
 
         * TAO_IDL/be/be_visitor_typecode/struct_typecode.cpp:
